<resources>
    <string name="app_name">송도삼겹</string>

    <string name="label_email">이메일</string>
    <string name="label_name">담당자 이름</string>
    <string name="label_branch_name">지점명</string>
    <string name="label_branch_code">지점 코드</string>
    <string name="label_phone">전화번호</string>
    <string name="label_memo">메모 (선택)</string>

    <string name="action_submit">신청서 제출</string>

    <string name="msg_waiting_approval">승인 대기 중입니다. 본사 승인 후 로그인 가능합니다.</string>
    <string name="msg_submit_ok">신청서가 제출되었습니다. 승인 대기 화면으로 이동합니다.</string>
    <string name="msg_submit_fail">제출에 실패했습니다. 잠시 후 다시 시도하세요.</string>

    <string name="badge_pending">주문</string>
    <string name="badge_approved">승인</string>
    <string name="badge_rejected">거절</string>
    <string name="badge_shipped">출고 완료</string>
    <string name="badge_delivered">완료</string>
    <string name="badge_unknown">UNKNOWN</string>

    <string name="msg_order_not_found">주문을 찾을 수 없습니다.</string>
    <string name="hq_order_detail_summary">합계 %1$s · %2$s · %3$s</string>
    <string name="hq_order_detail_branch">지사: %1$s</string>

    <string name="menu_export_csv">CSV 내보내기</string>
    <string name="msg_export_success">CSV로 내보냈습니다.</string>
    <string name="msg_export_failed">CSV 내보내기에 실패했습니다.</string>


    <string name="msg_order_items_empty">항목이 없습니다.</string>
    <string name="title_hq_order_detail">주문 상세</string>

    <string name="branch_history_title">주문 내역</string>
    <string name="branch_order_detail_title">주문 상세</string>
    <string name="branch_history_short">내역</string>
    <string name="filter_period">기간</string>
    <string name="period_none">전체</string>
    <string name="period_today">오늘</string>
    <string name="period_7days">7일</string>
    <string name="period_this_month">이번 달</string>
    <string name="no_orders">주문이 없습니다.</string>
    <string name="order_count_fmt">건수: %1$d</string>
    <string name="copy_order_id">주문ID 복사</string>
    <string name="copied_order_id">주문 ID를 복사했습니다</string>
    <string name="order_header">주문 헤더</string>
    <string name="order_items">주문 품목</string>
    <string name="no_items">품목이 없습니다.</string>

    <string name="order_title_fmt">주문 %1$s</string>
    <string name="order_summary_fmt">합계 %1$s원 · %2$d개</string>
    <string name="no_more_orders">마지막 결과입니다</string>

    <string name="search_hint">주문ID(#포함 가능) 또는 메모 검색</string>
    <string name="clear">지움</string>
    <string name="note_search_hint_status_disabled">메모 검색에서는 상태 필터가 적용되지 않습니다.</string>

    <string name="tab_products">상품</string>
    <string name="tab_cart">장바구니</string>
    <string name="tab_history">내역</string>
    <string name="checkout_title">주문 확인</string>

    <string name="tab_settings">설정</string>
    <string name="account_info">계정 정보</string>
    <string name="email">이메일</string>
    <string name="branch">지사</string>
    <string name="role">역할</string>
    <string name="app_info">앱 정보</string>
    <string name="version">버전</string>
    <string name="app_version_fmt">v%1$s</string>
    <string name="logout">로그아웃</string>
    <string name="logged_out">로그아웃되었습니다.</string>
    <string name="not_available">N/A</string>


    <string name="checkout_title_base">주문 결제</string>
    <string name="checkout_requested_date_hint">요청일 선택(선택)</string>
    <string name="checkout_note_hint">요청 메모(선택)</string>
    <string name="checkout_confirm">주문 확정</string>

    <string name="order_amount_zero">총 0원</string>
    <string name="order_amount_fmt">총 %1$s원</string>
    <string name="select_requested_date">요청일 선택</string>
    <string name="invalid_date_fmt">%1$s 형식으로 입력하세요</string>
    <string name="cart_empty">장바구니가 비었습니다</string>
    <string name="order_placed">주문이 접수되었습니다</string>
    <string name="order_failed_fmt">주문 실패: %1$s</string>

    <string name="channel_orders_name">주문 알림</string>
    <string name="channel_orders_desc">결제 및 주문상태 관련 알림</string>

    <string name="push_title_paid">결제 완료</string>
    <string name="push_body_paid">결제가 정상 처리되었습니다.</string>
    <!-- 검색/안내 문구 -->
    <string name="branch_search_hint_period_disabled">지사명 검색에서는 기간 필터가 적용되지 않습니다.</string>
</resources>